Opened 12 years ago

Closed 7 years ago

#9251 closed bug (fixed)

[MediaPlayer] crashes in BMenuItem::Submenu ()

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10706
Platform: All

Description

This is hrev44937.

  • Open MediaPlayer
  • Press Alt+Esc to open File menu
  • Move to Open file... menu item and press right arrow
[Switching to team /boot/system/apps/MediaPlayer (2123) thread menu_tracking (2134)]
0x0040eefa in BMenuItem::Submenu () from /boot/system/lib/libbe.so
(gdb) bt
#0  0x0040eefa in BMenuItem::Submenu () from /boot/system/lib/libbe.so
#1  0x004054f8 in BMenu::_Track () from /boot/system/lib/libbe.so
#2  0x00409faa in BMenuBar::_Track () from /boot/system/lib/libbe.so
#3  0x00409d17 in BMenuBar::_TrackTask () from /boot/system/lib/libbe.so
#4  0x009e86f3 in thread_entry () from /boot/system/lib/libroot.so
#5  0x78184fec in ?? ()
(gdb) 

Same crash happens in DiskProbe. Open file menu seems to always stay empty when navigating with a mouse.

Found by fwisses on #haiku

Change History (5)

comment:1 by diver, 11 years ago

Blocking: 10706 added

comment:2 by axeld, 8 years ago

Owner: changed from axeld to nobody
Status: newassigned

comment:3 by closequarters, 7 years ago

Planning to work on this ticket

comment:4 by closequarters, 7 years ago

Patch posted on Gerrit: https://review.haiku-os.org/c/haiku/+/317

The patch solves 2 related issues: 1) A crash occurring when using the keyboard to navigate to the "Open Files..." submenu found in many applications including MediaPlayer and DiskProbe 2) Keyboard navigation to the same "Open Files..." submenu.

Once I fixed issue 1, issue 2 became apparent. With the crash fixed, you could attempt to keyboard navigate to the submenu but it would not display anything, the menu selection simply reset to the parent menu. These 2 issues would likely show up on any "recent items" menus

The problem was that when a submenu is rendered that was generated by the Tracker recent items menu private classes, a different drawing sequence occurred that called _AddDynamicItems without the keydown parameter. That caused the drawing of the submenu to be skipped.

comment:5 by waddlesplash, 7 years ago

Resolution: fixed
Status: assignedclosed

Merged in hrev52096. Thanks!

Note: See TracTickets for help on using tickets.